update place / fix z-index bugs

--- a/src/components/Header/Computer/HeaderComp.module.css
+++ b/src/components/Header/Computer/HeaderComp.module.css
@@ -8,7 +8,7 @@
     transform: translateY(0);
     position: fixed;
     top: 0;
-    z-index: 9999;
+    z-index: 250;
   }
   
   .hideHeader {
